# goit-pyweb-10

./: pyproject.toml
quotes_project/quotes/: urls.py  views.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: base.html  index.html  quote.html
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/users/: forms.py  views.py
quotes_project/users/templates/users/: signup.html
